# Sempervirens

./: README.md
include/: Sempervirens.hpp  Sempervirens_pch.hpp
include/Application/: Application.hpp  EntryPoint.hpp
include/EventSystem/: Event.hpp  Event.inl
include/Keyboard/: IKeyboard.hpp  KeySymbols.hpp  Keyboard.hpp
include/Keyboard/Platform/Linux/: LinuxKeySymbols.hpp  LinuxKeyboard.hpp
include/Logging/: ConsoleLogger.hpp  Logger.hpp
include/Macros/: Platform.hpp
include/MemoryAlloc/: BoundsCheckingPolicy.hpp  LinearAllocator.hpp  MemoryAllocHeap.hpp  MemoryArea.hpp  MemoryArena.hpp  MemoryArena.inl  MemoryHelperFcns.hpp  MemoryHelperFcns.inl
include/UnitTesting/: UnitTest.hpp  UnitTest.inl  UnitTestRegister.hpp
include/Window/: Window.hpp
include/Window/Platform/Linux/: LinuxWindow.hpp
src/: CMakeLists.txt  Sempervirens.hpp  Sempervirens_pch.hpp
src/App/DynamicLibs/include/: DynamicLibs.hpp
src/App/Platform/: Platform.hpp
src/App/include/DynamicLibs/: DynamicLibs.hpp  DynamicLibs.hpp~
src/App/include/MemoryAlloc/: MemoryAlloc.hpp  MemoryAlloc.hpp~
src/App/include/Misc/: Misc.hpp  Misc.hpp~
src/App/include/Platform/: Platform.hpp
src/App/src/DynamicLibs/: DynamicLibs_unix.cpp  DynamicLibs_unix.cpp~
src/App/src/MemoryAlloc/: MemoryAlloc_unix.cpp
src/Application/: Application.cpp  CMakeLists.txt
src/Application/include/: Application.hpp
src/Application/include/Application/: Application.hpp  EntryPoint.hpp
src/Application/src/Application/: Application.cpp  Application.cpp~
src/Core/: CMakeLists.txt
src/Core/include/DynamicLibs/: DynamicLibs.hpp
src/Core/include/EventSystem/: Event.hpp  Event.inl
src/Core/include/Logging/: ActiveQueue.inl  ConsoleLogger.hpp  LogLevel.hpp  LogSink.hpp  LogSink.inl  Logger.hpp  Singleton.hpp  Singleton.inl
src/Core/include/Logging/Logging.v0/: Active.hpp  ActiveQueue.hpp  LogMsg.hpp  LogSink.hpp  Logger.hpp
src/Core/include/MemoryAlloc/: BoundsCheckingPolicy.hpp  LinearAllocator.hpp  MemoryAlloc.hpp  MemoryAllocHeap.hpp  MemoryArea.hpp  MemoryArena.hpp  MemoryArena.inl  MemoryHelperFcts.hpp  MemoryHelperFcts.inl
src/Core/include/UnitTesting/: UnitTest.hpp  UnitTest.inl  UnitTestRegister.hpp
src/Core/src/DynamicLibs/: DynamicLibs_unix.cpp
src/Core/src/EventSystem/: Event.cpp
src/Core/src/Logging/: ConsoleLogger.cpp  LogMsg.cpp  Logger.cpp
src/Core/src/Logging/Logging.v0/: Active.cpp  LogLevel.cpp  LogSink.cpp  Logger.cpp
src/Core/src/MemoryAlloc/: LinearAllocator.cpp  MemoryAllocHeap.cpp  MemoryAlloc_unix.cpp  MemoryArea.cpp
src/Core/src/UnitTesting/: UnitTest.cpp  UnitTestRegister.cpp
src/Core/test/: LoggerTest.cpp  MemoryArenaTest.cpp  UnitTestRegisterTest.cpp
src/EventSystem/: CMakeLists.txt  Event.cpp
src/Graphics/: CMakeLists.txt
src/Graphics/include/GraphicsMgr/: GraphicsMgr.hpp  IGraphicsRenderer.hpp
src/Graphics/include/GraphicsRenderer/: IGraphicsRenderer.hpp  IGraphicsRenderer.hpp~  OpenGLRenderer.hpp
src/Graphics/src/GraphicsMgr/: GraphicsMgr.cpp
src/Graphics/src/GraphicsRenderer/: IGraphicsRenderer.cpp  OpenGLRenderer.cpp
src/Graphics/test/: GraphicsMgrTest.cpp  GraphicsMgrTest.cpp~
src/Imports/: CMakeLists.txt
src/Imports/src/glad/: glad.c
src/Input/include/Backend/Linux/: LinuxKeyCodes.hpp  LinuxKeySymbols.hpp
src/Input/include/Interface/: KeyCodes.hpp  KeySymbols.hpp
src/Input/include/Keyboard/: Keyboard.hpp
src/Keyboard/: CMakeLists.txt
src/Keyboard/Platform/Linux/: LinuxKeyboard.cpp
src/Logging/: CMakeLists.txt  ConsoleLogger.cpp  Logger.cpp
src/MemoryAlloc/: CMakeLists.txt  LinearAllocator.cpp  MemoryAllocHeap.cpp  MemoryArea.cpp
src/Misc/Macros/: Assert.hpp  Build.hpp
src/Renderer/: CMakeLists.txt
src/Renderer/include/Renderer/: IRenderer.hpp  OpenGLRenderer.hpp
src/Renderer/include/RendererMgr/: IRenderer.hpp  RendererMgr.hpp
src/Renderer/src/Renderer/: IRenderer.cpp  OpenGLRenderer.cpp
src/Renderer/src/RendererMgr/: RendererMgr.cpp
src/Renderer/test/: RendererMgrTest.cpp
src/UnitTesting/: CMakeLists.txt  UnitTest.cpp  UnitTestRegister.cpp
src/Utilities/: CMakeLists.txt
src/Utilities/include/Logging/: Active.hpp  ActiveQueue.hpp  ActiveQueue.inl  LogLevel.hpp  LogMsg.hpp  LogSink.hpp  LogSink.inl  Logger.hpp  Singleton.hpp  Singleton.inl
src/Utilities/include/MemoryAlloc/: BoundsChecking.hpp  BoundsCheckingPolicy.hpp  LinearAllocator.hpp  LinearAllocator.inl  MemoryAllocPolicy.hpp  MemoryArea.hpp  MemoryArena.hpp  MemoryArena.inl  MemoryHelperFcts.hpp  MemoryHelperFcts.inl
src/Utilities/include/UnitTesting/: UnitTest.hpp  UnitTest.inl  UnitTestRegister.hpp
src/Utilities/src/Logging/: Active.cpp  LogLevel.cpp  LogMsg.cpp  LogSink.cpp  Logger.cpp
src/Utilities/src/MemoryAlloc/: LinearAllocator.cpp  MemoryArea.cpp
src/Utilities/src/UnitTesting/: UnitTest.cpp  UnitTestRegister.cpp
src/Utilities/test/: LoggerTest.cpp  MemoryArenaTest.cpp  UnitTestRegisterTest.cpp
src/Vendors/include/glad/: glad.h
src/Window/: CMakeLists.txt  CMakeLists.txt~
src/Window/Platform/Linux/: LinuxWindow.cpp
src/Window/include/Backend/Linux/: LinuxWindow.hpp  LinuxWindow.hpp~
src/Window/include/Interface/: IWindow.hpp  IWindow.hpp~
src/Window/src/Backend/Linux/: LinuxWindow.cpp  LinuxWindow.cpp~
src/Window/test/: WindowTest.cpp  WindowTest.cpp~
src/lib/: CMakeLists.txt
src/lib/include/macros/: Build.hpp  Build.hpp~
src/lib/include/utils/: Active.hpp  ActiveQueue.hpp  ActiveQueue.inl  LogLevel.hpp  LogMsg.hpp  LogMsg.inl  LogSink.hpp  LogSink.inl  LogSinkUptr.hpp  LogSinkUptr.inl  Logger.hpp  Singleton.hpp  Singleton.inl  UnitTest.hpp  UnitTest.inl  UnitTestRegister.hpp
src/lib/src/utils/: Active.cpp  LogLevel.cpp  LogMsg.cpp  LogSink.cpp  LogSinkUptr.cpp  Logger.cpp  UnitTest.cpp  UnitTestRegister.cpp
src/lib/test/: LoggerTest.cpp
tests/Logging/: LoggerTest.cpp
tests/MemoryAlloc/: MemoryArenaTest.cpp
tests/UnitTesting/: UnitTestRegisterTest.cpp
tests/Window/: WindowTest.cpp
